过滤删除的用户信息
