# server/main.go
@@ -7,6 +7,13 @@ import (
 	"goweb-gin-demo/initialize"
 )
 
+// @title Swagger Example API
+// @version 0.0.1
+// @description This is a sample Server pets
+// @securityDefinitions.apikey ApiKeyAuth
+// @in header
+// @name x-token
+// @BasePath /
 func main() {
 	global.GLOBAL_VP = core.Viper()      // 初始化Viper
 	global.GLOBAL_LOG = core.Zap()       // 初始化zap日志库
